Update image paths to include './' prefix

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   <!-- Baby Photo -->
   <div class="photos">
     <div class="photo baby-photo">
-      <img src="1.jpg" alt="Baby Photo">
+      <img src="./1.jpg" alt="Baby Photo">
     </div>
   </div>
 
@@ -186,7 +186,7 @@
   <!-- Family Photo at End -->
   <div class="photos">
     <div class="photo">
-      <img src="3.jpg" alt="Family Photo">
+      <img src="./3.jpg" alt="Family Photo">
     </div>
   </div>
 
