Update birthday invitation header formatting

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
 
   <!-- Header -->
   <div class="header">
-    <h1>🎉 प्रथम वाढदिवसाचे आमंत्रण 🎉</h1>
-    <span>First Birthday Celebration</span>
+    <h1>🎉प्रथम वाढदिवसाचे आमंत्रण🎉</h1>
+    <span>🎉 First Birthday Celebration 🎉</span>
   </div>
 
   <!-- Baby Photo -->
