--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
   <!-- Header -->
   <div class="header">
-    <h1>प्रथम वाढदिवसाचे आमंत्रण</h1>
+    <h1><u>प्रथम वाढदिवसाचे आमंत्रण</u></h1>
     <span>🎈 First Birthday Celebration 🎈</span>
   </div>
 
@@ -179,7 +179,7 @@
       </a>
     </p>
 
-    <div class="time">📅 दिनांक : 05 January 2025</div>
+    <div class="time">📅 दिनांक : 05 जानेवारी 2025</div>
     <div class="time">⏰ वेळ : सायं. ७:०० वाजता</div>
   </div>
 
