Update date emoji in index.html

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       </a>
     </p>
 
-    <div class="time">📅 दिनांक : 05 जानेवारी 2025</div>
+    <div class="time">🗓️ दिनांक : 05 जानेवारी 2025</div>
     <div class="time">⏰ वेळ : सायं. ७:०० वाजता</div>
   </div>
 
