--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <!-- Header -->
   <div class="header">
     <h1><u>प्रथम वाढदिवसाचे आमंत्रण</u></h1>
-    <span>🎈 First Birthday Celebration 🎈</span>
+    <span>🎈 First Birthday Invitation 🎈</span>
   </div>
 
   <!-- Baby Photo -->
@@ -179,17 +179,18 @@
       </a>
     </p>
 
-    <div class="time">🗓️ दिनांक : 0६ जानेवारी 2025</div>
+    <div class="time">🗓️ दिनांक : 0७ जानेवारी 2025</div>
     <div class="time">⏰ वेळ : सायं. ७:०० वाजता</div>
   </div>
 
   <!-- Family Photo at End -->
+  <!--
   <div class="photos">
     <div class="photo">
       <img src="./3.jpg" alt="Family Photo">
     </div>
   </div>
-
+ -->
   <!-- Footer -->
   <footer>
     आपल्या उपस्थितीने हा दिवस अधिक आनंदी होईल 💖
