--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   <!-- Baby Photo -->
   <div class="photos">
     <div class="photo baby-photo">
-      <img src="./1.jpg" alt="Baby Photo">
+      <img src="./1000234610.jpg" alt="Baby Photo">
     </div>
   </div>
 
