--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
   max-height: 300px;   /* new line add */
   object-fit: contain;
   background: #fff1f6;
+  transform: scale(1.2);  
 }
 
     /* Baby highlight */
